add files loader & fix empty-email bug
